Add JWT Role Authentication with Refresh Token

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSection": {
+    "Key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
+    "Issuer": "https://localhost:7140",
+    "Audience": "https://localhost:7140"
+  }
 }
