--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -12,10 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.15" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
-    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.4.0" />
-    <PackageReference Include="Syncfusion.Blazor.Buttons" Version="23.1.36" />
-    <PackageReference Include="Syncfusion.Blazor.Popups" Version="23.1.36" />
-    <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.1.36" />
+    <PackageReference Include="Microsoft.Fast.Components.FluentUI" Version="3.5.5" />
   </ItemGroup>
 
   <ItemGroup>
